# agent-skill-factory

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  development-plan.md  eval-schema.json  evaluation.md  ingestion.md  llm-providers.md  registry.md  repair.md  security-model.md  skill-output-format.md  trace-schema.json
src/skill_factory/: __init__.py  cli.py  evaluator.py  extractors.py  frontmatter.py  generator.py  ingestion.py  linter.py  llm.py  models.py  naming.py  planner.py  registry.py  repair.py  runner.py  schemas.py  security.py  traces.py
tests/: test_cli.py  test_evaluator.py  test_generator_and_linter.py  test_ingestion.py  test_llm.py  test_naming.py  test_planner.py  test_registry.py  test_repair.py  test_runner.py  test_schemas.py
tests/fixtures/ingestion/: release.trace.json
tests/fixtures/ingestion/release-workflow/: guide.md
tests/fixtures/skills/failing-skill/: SKILL.md
tests/fixtures/skills/failing-skill/evals/: evals.json
tests/fixtures/skills/release-note-builder/: SKILL.md
tests/fixtures/skills/release-note-builder/evals/: evals.json
tests/fixtures/skills/release-note-builder/references/: domain.md
