[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agent-skill-factory"
version = "0.3.0"
description = "Generate, lint, and evaluate reusable Agent Skills."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["agents", "skills", "llm", "code-generation", "developer-tools"]
authors = [
  { name = "Agent Skill Factory contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MuzeAnisichael/agent-skill-factory"
Repository = "https://github.com/MuzeAnisichael/agent-skill-factory"
Issues = "https://github.com/MuzeAnisichael/agent-skill-factory/issues"
Documentation = "https://github.com/MuzeAnisichael/agent-skill-factory/tree/main/docs"

[project.scripts]
skill-factory = "skill_factory.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_factory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
